<resources>
    <string-array name="imgName">
        <item> 预定座位</item>
        <item>外卖</item>
        <item>小吃快餐</item>
        <item>港澳菜</item>
        <item>火锅</item>
        <item>自助餐</item>
        <item>生日蛋糕</item>
        <item>甜点饮品</item>
    </string-array>
    <string name="app_name">Foodle</string>
    <string name="home">首页</string>
    <string name="foodie">美食</string>
    <string name="merchant">商家</string>
    <string name="my">我的</string>
    <string name="hinttxt">请输入要搜索的内容</string>
    <string name="merchan_et_text">想吃点什么</string>

    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="placcount">输入账号</string>
    <string name="plpassword">输入密码</string>
    <string name="logoin">登录</string>
    <string name="remember">是否记住密码</string>
    <string name="register">注册账号</string>
    <string name="himt">注册账号</string>
    <string name="succed">登录成功</string>
    <string name="ressucced">注册成功</string>
    <string name="error">账号或者密码错误</string>
    <string name="sex">请输入性别</string>
    <string name="age">请输入年龄</string>
    
    <string name="lodocentre">登录中心</string>
    <string name="forget">忘记密码了？</string>

    <string name="Ticket">优惠券</string>
    <string name="Card">银行卡</string>
    <string name="Order">订单</string>
    <string name="Friend">我的好友</string>
    <string name="vip">会员中心</string>
    <string name="integral">积分商城</string>
    <string name="logor">登陆</string>
    <string name="user_orange">个人资料</string>
    <string name="favorite">收藏</string>

    <string name="weidin">未定</string>

    <string name="seta">这是预定座位页面</string>
    <string name="takeout">这是外卖页面</string>
    <string name="xiaochi">这是小吃页面</string>
    <string name="gangaocai">港澳菜</string>
    <string name="huoguo">火锅</string>
    <string name="zizhucan">自助餐</string>
    <string name="dangao">蛋糕</string>
    <string name="tianpin">甜品</string>
</resources>
