<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/himt"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"/>
    <EditText
        android:id="@+id/accountEdit_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placcount"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/passwordEdit_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/plpassword"
        android:password="true"/>
    <Button
        android:id="@+id/registerBt_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"/>


</LinearLayout>
