<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@mipmap/logo"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"/>
            <EditText
                android:id="@+id/accountEdit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/placcount"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/plpassword"
                android:password="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
        </LinearLayout>
        <CheckBox
            android:id="@+id/rememBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"/>
        <Button
            android:id="@+id/logoBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logoin"/>
        <TextView
            android:id="@+id/remeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>
</LinearLayout>

