<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/currency_full"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        style="@style/currency_h0"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_weight="3">
        <ImageView
            style="@style/currency_w0"
            android:layout_weight="3"
            android:src="@mipmap/mya1"/>
        <LinearLayout
            style="@style/currency_w0"
            android:orientation="vertical"
            android:layout_weight="5">
            <TextView
                android:id="@+id/my_name_tv"
                android:gravity="center"
                style="@style/currency_h0"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/logor"/>
            <TextView
                android:id="@+id/my_logoin_tv"
                android:gravity="center"
                style="@style/currency_h0"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="账户"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:background="@color/white"
        android:orientation="horizontal"
        style="@style/currency_h0"
        android:layout_weight="2">
        <LinearLayout
            style="@style/currency_w0"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                style="@style/currency_h0"
                android:layout_weight="1"
                android:src="@mipmap/order"/>
            <TextView
                android:gravity="center"
                android:textSize="20sp"
                style="@style/currency_h0"
                android:layout_weight="0.5"
                android:text="@string/Order"/>
        </LinearLayout>
        <LinearLayout
            style="@style/currency_w0"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                style="@style/currency_h0"
                android:layout_weight="1"
                android:src="@mipmap/favorite"/>
            <TextView
                android:gravity="center"
                android:textSize="20sp"
                style="@style/currency_h0"
                android:layout_weight="0.5"
                android:text="@string/favorite"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        style="@style/currency_h0"
        android:layout_weight="1">
        <ImageView
            style="@style/currency_w0"
            android:layout_weight="1"
            android:src="@mipmap/quan"/>
        <TextView
            style="@style/currency_w0"
            android:layout_weight="6"
            android:textSize="25sp"
            android:gravity="center_vertical"
            android:text="@string/Ticket"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="0.8dp"
        android:background="@color/white"
        style="@style/currency_h0"
        android:layout_weight="1">
        <ImageView
            style="@style/currency_w0"
            android:layout_weight="1"
            android:src="@mipmap/card"/>
        <TextView
            style="@style/currency_w0"
            android:layout_weight="6"
            android:textSize="25sp"
            android:gravity="center_vertical"
            android:text="@string/Card"/>
    </LinearLayout>
    <LinearLayout
        android:background="@color/white"
        style="@style/currency_h0"
        android:layout_marginTop="0.8dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">
        <ImageView
            style="@style/currency_w0"
            android:layout_weight="1"
            android:src="@mipmap/icon_my1"/>
        <TextView
            android:id="@+id/shouData"
            style="@style/currency_w0"
            android:layout_weight="6"
            android:textSize="25sp"
            android:gravity="center_vertical"
            android:text="@string/user_orange"/>

    </LinearLayout>
    <LinearLayout
        android:background="@color/white"
        style="@style/currency_h0"
        android:layout_weight="1">
        <ImageView
            style="@style/currency_w0"
            android:layout_weight="1"
            android:src="@mipmap/friend"/>
        <TextView
            style="@style/currency_w0"
            android:layout_weight="6"
            android:textSize="25sp"
            android:gravity="center_vertical"
            android:text="@string/Friend"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="0.8dp"
        android:background="@color/white"
        style="@style/currency_h0"
        android:layout_weight="1">
        <ImageView
            style="@style/currency_w0"
            android:layout_weight="1"
             android:src="@mipmap/vip"/>
        <TextView
            style="@style/currency_w0"
            android:layout_weight="6"
            android:textSize="25sp"
            android:gravity="center_vertical"
            android:text="@string/vip"/>
    </LinearLayout
        >
    <LinearLayout
        android:layout_marginTop="0.8dp"
        android:background="@color/white"
        style="@style/currency_h0"
        android:layout_weight="1">
        <ImageView
            style="@style/currency_w0"
            android:layout_weight="1"
            android:src="@mipmap/integral"/>
        <TextView
            style="@style/currency_w0"
            android:layout_weight="6"
            android:textSize="25sp"
            android:gravity="center_vertical"
            android:text="@string/integral"/>
    </LinearLayout>

</LinearLayout>